Dodano podstawowe style i treść strony. Nowe pliki obrazkowe, jeden nieużyty.

--- a/index.html
+++ b/index.html
@@ -9,52 +9,112 @@
 	</head>
 
 	<body>
-        <nav>
-            <a></a>
-            <a></a>
-            <a></a>
-            <a></a>
-            <a></a>
-            <a></a>
-        </nav>
+        <!--MENU-->
+        <div class="nav">
+            <a>strona główna</a>
+            <a>o nas</a>
+            <a>aktualności</a>
+            <a>misja</a>
+            <a>polityka prywatności</a>
+            <a id="join">zostań wolontariuszem</a>
+        </div>
+        <!--STRONA TYTUŁOWA-->
         <div class="title_page">
-            <h1></h1>
+            <h1>nowa nadzieja naszą wizją na lepszą przyszłość</h1>
         </div>
+        <!--BLOKI-->
         <div class="blocks">
-        <span class="block"><h2 class="middle"></h2><p class="middle"></p></span>
-        <span class="block"><h2 class="middle"></h2><p class="middle"></p></span>
-        <span class="block"><h2 class="middle"></h2><p class="middle"></p></span>
+        <span class="block"><h2 class="h_middle">o nas</h2><p class="p_middle">kim jesteśmy i jak działamy</p></span>
+        <span class="block"><h2 class="h_middle">misja</h2><p class="p_middle">co robimy i o co walczymy</p></span>
+        <span class="block"><h2 class="h_middle">wydarzenia</h2><p class="p_middle">gdzie i kiedy promujemy naszą działalność</p></span>
         </div>
-        <div class="white_article">
-        <h1></h1>
-        <p class="small"></p>
-        <div class="button"><a></a></div>
-        </div>
-        <div class="color_article">
-        <h1></h1>
-        <p class="small"></p>
-        <div class="button"><a></a></div>
-        </div>
-        <div class="callendar">
-            <p class="big"></p>
-            <p class="big"></p>
-            <p class="big"></p>
-        </div>
-        <div class="donate">
-            <span class="block"><h2 class="middle"></h2><p class="middle"></p><div class="button"><a></a></div></span>
-            <span class="block"></span>
-        </div>
-        <div class="info">
-            <span id="contact"></span>
-            <span id="newsletter"><h2 class="middle"></h2></span>
-            <span id="links"></span>
-        </div>
-        <div class="footer">
-            <img src="#">
-            <img src="#">
-            <img src="#">
-            <img src="#">
-            <p class="small"></p>
+        
+        <div class="row">
+            <div class="main">
+                <!--ARTYKUŁY-->
+                <div class="white_article">
+                <h2 class="h_middle">o nas</h2>
+                <p class="p_small">
+                    Fundacja Nowa Nadzieja jest częścią <b>OBAMA FOUNDATION.</b> To niezależna, krajowa organizacja non-profit założona 1 października 2019. w celu <b>promowania wsparcia społecznego i wyrównywania szans rozwojowo - zawodowych.</b> Rada Fundacji Nowa Nadzieja składa się z obecnych i byłych rektorów polskich uniwersytetów i innych wybitnych osób publicznych. W swoich celach ma za zadanie promować następujące działania społeczne:
+                        <b><br/>1. akcje związane z działnością lokalnych banków żywności
+                        <br/>2. wsparcia schronisk dla zwierząt,
+                        <br/>3. lokalnych zbiórkach śmieci,
+                        <br/>4. wsparcia w nauce dzieci ze środowisk nieuprzywilejowanych
+                        <br/>5. lokalne zbiórki krwi.</b>
+                    </p>
+                <div class="button"><a href="#">czytaj dalej</a></div>
+                </div>
+                <div class="color_article">
+                <h2 class="h_middle">misja</h2>
+                <p class="p_small">
+                    Ta misja dotyczy całej naszej pracy, bez względu na to, czy organizuje ona szkolenia dla liderów w społecznościach na całym świecie, wspiera globalną edukację dziewcząt czy zapewnia młodym mężczyznom o różnych kulturach drogę do rozwoju swoich do możliwości.
+                    Naszą misją jest inspirowanie, wzmacnianie pozycji i łączenie ludzi w celu zmiany ich świata.
+
+                    <b>Dowiedz się więcej o tych inicjatywach na tej stronie.</b>
+                    </p>
+                <div class="button"><a href="#">więcej</a></div>
+                </div>
+                <!--KALENDARZ-->
+                <div class="callendar">
+                    <h2 class="h_middle">nadchodzące wydarzenia</h2>
+                    <ul>
+                        <li><span class="date">16.11.2019</span> - Konkurs IT Diamonds, Chorzów, godzina rozpoczęcia 9:00</li>
+                        <li><span class="date">06.12.2019</span> - Santa Claud, Katowice, godzina rozpoczęcia 18:00</li>
+                        <li><span class="date">18.01.2019</span> - ECCO Walkathon, Warszawa, godzina rozpoczęcia 10:00</li>
+                    </ul>
+                </div>
+                <!--PROŚBA O DOŁĄCZENIE-->
+                <div class="donate">
+                    <span class="block"><h2 class="h_middle">dołącz do nas!</h2>
+                        <p class="p_middle">dajmy światu nową nadzieję</p>
+                        <div class="button"><a href="#">dołącz</a></div></span>
+                    <span class="image"></span>
+                </div>
+                <!--KONTAKT/NEWSLETTER/LINKI-->
+                <div class="info">
+                    <span id="contact">
+                    <h2 class="h_small">Kontakt</h2>
+                        <p class="p_little">
+                        Fundacja Nowa Nadzieja
+                        <br/>Ul. Słoneczna 31
+                        <br/>PL 00-511 Warszawa
+                        <br/><b>Telefon:</b> +48 22 629 53 21
+                        <br/><b>Fax:</b> +48 22 629 1678
+                        <br/><b>Email:</b> fundacja@nownadzieja.pl
+
+                        <br/>
+                        <br/>Sekretariat
+                        <br/>Joanna Nowak
+                        <br/><b>Email:</b> j.nowak@nowanadzieja.pl
+                        </p>
+                    </span>
+                    <span id="newsletter"><h2 class="h_small">Zapisz się na newsletter</h2>
+                        <center><input type="email" name="Email" maxlength="40" placeholder="Email"></center>
+                        
+                        <div class="button"><a href="#">zapisz się</a></div>
+                    </span>
+                    <span id="links">
+                        <h2 class="h_small">Linki</h2>
+                        <p class="p_little">
+                            <a>O Nas</a>
+                            <a>Aktualności</a>
+                            <a>Kalendarz</a>
+                            <a>Akcje</a>
+                            <a>Wesprzyj</a>
+                            <a href="https://www.facebook.com/ITGirlsRevolutionAcademy/">Facebook</a>
+                            <a>Polityka prywatności</a>
+                        </p>
+                    </span>
+                </div>
+                <!--STOPKA I PARTNERZY-->
+                <div class="footer">
+                    <img src="#">
+                    <img src="#">
+                    <img src="#">
+                    <img src="#">
+                    <p class="p_small"></p>
+                </div>
+            </div>
         </div>
 	</body>
 </html>
