Ukończono podstawową wersję strony. Title_page nie działa po zmniejszeniu

--- a/index.html
+++ b/index.html
@@ -9,31 +9,31 @@
 	</head>
 
 	<body>
-        <!--MENU-->
-        <div class="nav">
-            <a>strona główna</a>
-            <a>o nas</a>
-            <a>aktualności</a>
-            <a>misja</a>
-            <a>polityka prywatności</a>
-            <a id="join">zostań wolontariuszem</a>
-        </div>
         <!--STRONA TYTUŁOWA-->
         <div class="title_page">
-            <h1>nowa nadzieja naszą wizją na lepszą przyszłość</h1>
+        <!--MENU-->
+            <div class="nav">
+                <a>strona główna</a>
+                <a>o nas</a>
+                <a>aktualności</a>
+                <a>misja</a>
+                <a>polityka prywatności</a>
+                <a id="join">zostań wolontariuszem</a>
+            </div>
+                <h1>nowa nadzieja naszą wizją na lepszą przyszłość</h1>
         </div>
         <!--BLOKI-->
         <div class="blocks">
-        <span class="block"><h2 class="h_middle">o nas</h2><p class="p_middle">kim jesteśmy i jak działamy</p></span>
-        <span class="block"><h2 class="h_middle">misja</h2><p class="p_middle">co robimy i o co walczymy</p></span>
-        <span class="block"><h2 class="h_middle">wydarzenia</h2><p class="p_middle">gdzie i kiedy promujemy naszą działalność</p></span>
+        <span class="block" style="background-color: #4a47a3;"><h2 class="h_middle">o nas</h2><p class="p_middle">kim jesteśmy i jak działamy</p></span>
+        <span class="block"style="background-color: #ad62aa;"><h2 class="h_middle">misja</h2><p class="p_middle">co robimy i o co walczymy</p></span>
+        <span class="block" style="background-color: #f4b0c7"><h2 class="h_middle">wydarzenia</h2><p class="p_middle">gdzie i kiedy promujemy naszą działalność</p></span>
         </div>
         
         <div class="row">
             <div class="main">
                 <!--ARTYKUŁY-->
                 <div class="white_article">
-                <h2 class="h_middle">o nas</h2>
+                <h2 class="h_big">o nas</h2>
                 <p class="p_small">
                     Fundacja Nowa Nadzieja jest częścią <b>OBAMA FOUNDATION.</b> To niezależna, krajowa organizacja non-profit założona 1 października 2019. w celu <b>promowania wsparcia społecznego i wyrównywania szans rozwojowo - zawodowych.</b> Rada Fundacji Nowa Nadzieja składa się z obecnych i byłych rektorów polskich uniwersytetów i innych wybitnych osób publicznych. W swoich celach ma za zadanie promować następujące działania społeczne:
                         <b><br/>1. akcje związane z działnością lokalnych banków żywności
@@ -45,7 +45,7 @@
                 <div class="button"><a href="#">czytaj dalej</a></div>
                 </div>
                 <div class="color_article">
-                <h2 class="h_middle">misja</h2>
+                <h2 class="h_big">misja</h2>
                 <p class="p_small">
                     Ta misja dotyczy całej naszej pracy, bez względu na to, czy organizuje ona szkolenia dla liderów w społecznościach na całym świecie, wspiera globalną edukację dziewcząt czy zapewnia młodym mężczyznom o różnych kulturach drogę do rozwoju swoich do możliwości.
                     Naszą misją jest inspirowanie, wzmacnianie pozycji i łączenie ludzi w celu zmiany ich świata.
@@ -56,7 +56,7 @@
                 </div>
                 <!--KALENDARZ-->
                 <div class="callendar">
-                    <h2 class="h_middle">nadchodzące wydarzenia</h2>
+                    <h2 class="h_big">nadchodzące wydarzenia</h2>
                     <ul>
                         <li><span class="date">16.11.2019</span> - Konkurs IT Diamonds, Chorzów, godzina rozpoczęcia 9:00</li>
                         <li><span class="date">06.12.2019</span> - Santa Claud, Katowice, godzina rozpoczęcia 18:00</li>
@@ -65,7 +65,7 @@
                 </div>
                 <!--PROŚBA O DOŁĄCZENIE-->
                 <div class="donate">
-                    <span class="block"><h2 class="h_middle">dołącz do nas!</h2>
+                    <span class="color_article"><h2 class="h_middle">dołącz do nas!</h2>
                         <p class="p_middle">dajmy światu nową nadzieję</p>
                         <div class="button"><a href="#">dołącz</a></div></span>
                     <span class="image"></span>
