Dodano przejścia, ogólnie poprawiono wygląd. Dodano pliki obrazkowe partnerów do folderu.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </span>
                     <span id="links">
                         <h2 class="h_small">Linki</h2>
-                        <p class="p_little">
+                        <div class="little">
                             <a>O Nas</a>
                             <a>Aktualności</a>
                             <a>Kalendarz</a>
@@ -103,16 +103,12 @@
                             <a>Wesprzyj</a>
                             <a href="https://www.facebook.com/ITGirlsRevolutionAcademy/">Facebook</a>
                             <a>Polityka prywatności</a>
-                        </p>
+                        </div>
                     </span>
                 </div>
                 <!--STOPKA I PARTNERZY-->
                 <div class="footer">
-                    <img src="#">
-                    <img src="#">
-                    <img src="#">
-                    <img src="#">
-                    <p class="p_small"></p>
+                    <p class="p_little">Wszystkie prawa zastrzeżone</p>
                 </div>
             </div>
         </div>
