Dodano podstronę "O Nas". Dodano więcej plików obrazkowych do folderu.

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
                 <a>o nas</a>
                 <a>aktualności</a>
                 <a>misja</a>
-                <a>polityka prywatności</a>
+                <a>do pobrania</a>
                 <a id="join">zostań wolontariuszem</a>
             </div>
                 <h1>nowa nadzieja naszą wizją na lepszą przyszłość</h1>
         </div>
         <!--BLOKI-->
         <div class="blocks">
-        <span class="block" style="background-color: #4a47a3;"><h2 class="h_middle">o nas</h2><p class="p_middle">kim jesteśmy i jak działamy</p></span>
-        <span class="block"style="background-color: #ad62aa;"><h2 class="h_middle">misja</h2><p class="p_middle">co robimy i o co walczymy</p></span>
-        <span class="block" style="background-color: #f4b0c7"><h2 class="h_middle">wydarzenia</h2><p class="p_middle">gdzie i kiedy promujemy naszą działalność</p></span>
+            <span class="block" style="background-color: #4a47a3;"><h2 class="h_middle">o nas</h2><p class="p_middle">kim jesteśmy i jak działamy</p></span>
+            <span class="block"style="background-color: #ad62aa;"><h2 class="h_middle">misja</h2><p class="p_middle">co robimy i o co walczymy</p></span>
+            <span class="block" style="background-color: #f4b0c7"><h2 class="h_middle">wydarzenia</h2><p class="p_middle">gdzie i kiedy promujemy naszą działalność</p></span>
         </div>
         
         <div class="row">
@@ -39,7 +39,8 @@
                         <b><br/>1. akcje związane z działnością lokalnych banków żywności
                         <br/>2. wsparcia schronisk dla zwierząt,
                         <br/>3. lokalnych zbiórkach śmieci,
-                        <br/>4. wsparcia w nauce dzieci ze środowisk nieuprzywilejowanych
+                        <br/>4. wsparcia w nauce dzieci ze środowisk nieuprzywi-
+                        <br/>lejowanych
                         <br/>5. lokalne zbiórki krwi.</b>
                     </p>
                 <div class="button"><a href="#">czytaj dalej</a></div>
@@ -98,8 +99,8 @@
                         <div class="little">
                             <a>O Nas</a>
                             <a>Aktualności</a>
-                            <a>Kalendarz</a>
                             <a>Akcje</a>
+                            <a>Strona fundacji Michelle Obamy</a>
                             <a>Wesprzyj</a>
                             <a href="https://www.facebook.com/ITGirlsRevolutionAcademy/">Facebook</a>
                             <a>Polityka prywatności</a>
