--- a/aktualności.html
+++ b/aktualności.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>O Nas</title>
+		<title>Aktualności</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="initial-scale=1.0">
         <link rel="stylesheet" href="style.css" type="text/css">
@@ -20,59 +20,44 @@
                 <a>do pobrania</a>
                 <a id="join">zostań wolontariuszem</a>
             </div>
-            <h1>o nas</h1>
+            <h1>Aktualności</h1>
         </div>
             <div class="row">
             <div class="main">
                 <!--ARTYKUŁY-->
                 <div class="white_article">
+                <p class="p_big">Rozlicz z nami swój podatek</p>
                 <p class="p_small">
-                    Fundacja Nowa Nadzieja jest częścią <b>OBAMA FOUNDATION.</b> To niezależna, krajowa organizacja non-profit założona 1 października 2019. w celu <b>promowania wsparcia społecznego i wyrównywania szans rozwojowo - zawodowych.</b> Rada Fundacji Nowa Nadzieja składa się z obecnych i byłych rektorów polskich uniwersytetów i innych wybitnych osób publicznych. W swoich celach ma za zadanie promować następujące działania społeczne:
-                        <b><br/>1. akcje związane z działnością lokalnych banków żywności
-                        <br/>2. wsparcia schronisk dla zwierząt,
-                        <br/>3. lokalnych zbiórkach śmieci,
-                        <br/>4. wsparcia w nauce dzieci ze środowisk nieuprzywi-
-                        <br/>lejowanych
-                        <br/>5. lokalne zbiórki krwi.</b>
-                    <br/><br/>
-                    Fundacja Nowa Nadzieja organizuje <b>publiczne debaty i seminaria</b> na tematy <b>edukacji, ochrony środowiska, akcji ogólnospołecznych,</b> jak również ogranizuje kampanie w całej Polsce.
-<br/><br/>Logo organizacji ma dwa znaczenia informacyjne i promocyjne. Użycie loga w obu przypadkach wymaga stosowania innych wymiarów, używane w celach promocyjnych powinno występować razem z jego nazwą lub inicjałami.
-<br/><br/>Ostatni rok spędziliśmy na opracowywaniu programów i możliwości angażowania się na różne sposoby. Od liderów społecznych, którzy już robią wpływ w swoich społecznościach, po osoby szukające miejsca do rozpoczęcia, zapraszamy do zapoznania się z naszą pracą.
-<br/>
-                    <b>Budujemy zespół, do którego każdy może dołączyć. Mamy nadzieję, że będziesz tego częścią.</b>
-                    </p>
+                    Rozlicz swój PIT wspólnie z Fundacją Nowa Nadzieja i podziel się tym, co i tak oddajesz. Wystarczy, że wpiszesz w dokumentach nasz numer KRS.
+                </p>
                 </div>
-                <div class="big_image" style="background-image: url(biuro.jpg);"></div>
-                <div class="info">
-                <span id="account">
-                    <h2 class="h_small">Konto bankowe</h2>
-                    <p class="p_small">
-<br/>85 1140 1010 9874 2581 1800 1801
-<br/>Dla osób z zagranicy podajemy SWIFT oraz IBAN:
-<br/>SWIFT
-<br/>BREXPLKWWA9
-<br/>IBAN
-<br/>PL25 1190 1010 9814 2581 1800 1001
-                    </p>
-                    </span>
-                <span id="data">
-                    <h2 class="h_small">Dane o fundacji</h2>
-                    <p class="p_small">
-<br/>NIP: 529 31 00 461
-<br/>KRS: 00290018894
-<br/>REGON: 0179999771
-                    </p>    
-                    </span>
-                    <span id="contact">
-                    <h2 class="h_small">Kontakt</h2>
-                        <p class="p_small">
-                        Fundacja Nowa Nadzieja
-                        <br/>Ul. Słoneczna 31
-                        <br/>PL 00-511 Warszawa
-                        <br/><b>Telefon:</b> +48 22 629 53 21
-                        <br/><b>Fax:</b> +48 22 629 1678
-                        <br/><b>Email:</b> fundacja@nownadzieja.pl
-                    </span>
+                <div class="color_article">
+                <p class="p_big">Liczy się każdy krok! Zapraszamy na ECCO Walkathon 2020!</p>
+                <p class="p_small">
+                    Spacerując, pomagamy! Do wyboru mamy dwie trasy – 6 km i 10 km. 
+Każdy 1 KM = 4 zł na konto wybranej przez uczestnika fundacji.
+TY DECYDUJESZ! Zebrane fundusze zostaną przekazane na realizację ważnych społecznie projektów.
+                </p>
+                </div>
+                <div class="white_article">
+                <p class="p_big">Projekt IT GrA</p>
+                <p class="p_small">
+                    Kluczowe informacje o projekcie dostępne na stronie itgra.pl
+                </p>
+                </div>
+                <div class="big_image" style="background-image: url(dziewczyna.jpg)"></div>
+                <div class="white_article">
+                <p class="p_big">Wpis z dnia 11.10.2019:</p>
+                <p class="p_small">
+                    Wiadomość w związku z międzynarodowym dniem dziewczyny
+                    <br/>Dzisiaj, w Dniu Dziewczyny, z radością dzielę się wiadomościami, że w grudniu jadę do Azji, aby spotkać się z niektórymi z tych dziewcząt i organizacjami, które je wspierają. Jadę do Wietnamu, gdzie Girls Opportunity Alliance współpracuje z Room to Read, aby rzucić światło na ważne wysiłki na rzecz wzmocnienia pozycji dziewcząt. Razem mamy nadzieję wyposażyć więcej dziewcząt w umiejętności krytyczne, których potrzebują, aby stać się liderami własnego życia. Nie mogę się doczekać, aby podzielić się z Tobą tymi niesamowitymi historiami i cieszę się, że Girls Opportunity Alliance połączy siły z Today Show i YouTube Originals, aby przedstawić Ci dziewczyny, które spotykamy po drodze.
+<br/>
+<br/>W Dniu Dziewczyny i później mam nadzieję, że wszyscy znajdziecie sposób na wsparcie edukacji dla dorastających dziewcząt na całym świecie. Nie musisz lecieć do Wietnamu - możesz zorganizować wyprzedaż piekarni, zorganizować projekt ze znajomymi, zaangażować swoje biuro i wiele więcej.
+<br/>
+<br/>Sprawdź projekty na stronie Girls Opportunity Alliance GoFundMe i daj nam znać, jak podejmujesz działania - ponieważ przyszłość naszego świata jest tak jasna jak nasze dziewczyny.
+<br/>
+<br/>–Michelle
+                </p>
                 </div>
             <div class="donate">
                     <span class="color_article"><h2 class="h_middle">dołącz do nas!</h2>
