Dodano podstronę Do_Pobrania. Dodano powiększenie przycisku Zostań wolontariuszem. Zaczęto podstronę Misja. Dodano pliki obrazkowe oraz tekstowe do folderu.

--- a/do_pobrania.html
+++ b/do_pobrania.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Aktualności</title>
+		<title>Polityka Prywatności</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="initial-scale=1.0">
         <link rel="stylesheet" href="style.css" type="text/css">
@@ -20,44 +20,20 @@
                 <a>do pobrania</a>
                 <a id="join">zostań wolontariuszem</a>
             </div>
-            <h1>Aktualności</h1>
+            <h1>do pobrania</h1>
         </div>
             <div class="row">
             <div class="main">
-                <!--ARTYKUŁY-->
+                <!--PLIKI DO POBRANIA-->
                 <div class="white_article">
-                <p class="p_big">Rozlicz z nami swój podatek</p>
-                <p class="p_small">
-                    Rozlicz swój PIT wspólnie z Fundacją Nowa Nadzieja i podziel się tym, co i tak oddajesz. Wystarczy, że wpiszesz w dokumentach nasz numer KRS.
-                </p>
-                </div>
-                <div class="color_article">
-                <p class="p_big">Liczy się każdy krok! Zapraszamy na ECCO Walkathon 2020!</p>
-                <p class="p_small">
-                    Spacerując, pomagamy! Do wyboru mamy dwie trasy – 6 km i 10 km. 
-Każdy 1 KM = 4 zł na konto wybranej przez uczestnika fundacji.
-TY DECYDUJESZ! Zebrane fundusze zostaną przekazane na realizację ważnych społecznie projektów.
-                </p>
-                </div>
-                <div class="white_article">
-                <p class="p_big">Projekt IT GrA</p>
-                <p class="p_small">
-                    Kluczowe informacje o projekcie dostępne na stronie itgra.pl
-                </p>
-                </div>
-                <div class="big_image" style="background-image: url(dziewczyna.jpg)"></div>
-                <div class="white_article">
-                <p class="p_big">Wpis z dnia 11.10.2019:</p>
-                <p class="p_small">
-                    Wiadomość w związku z międzynarodowym dniem dziewczyny
-                    <br/>Dzisiaj, w Dniu Dziewczyny, z radością dzielę się wiadomościami, że w grudniu jadę do Azji, aby spotkać się z niektórymi z tych dziewcząt i organizacjami, które je wspierają. Jadę do Wietnamu, gdzie Girls Opportunity Alliance współpracuje z Room to Read, aby rzucić światło na ważne wysiłki na rzecz wzmocnienia pozycji dziewcząt. Razem mamy nadzieję wyposażyć więcej dziewcząt w umiejętności krytyczne, których potrzebują, aby stać się liderami własnego życia. Nie mogę się doczekać, aby podzielić się z Tobą tymi niesamowitymi historiami i cieszę się, że Girls Opportunity Alliance połączy siły z Today Show i YouTube Originals, aby przedstawić Ci dziewczyny, które spotykamy po drodze.
-<br/>
-<br/>W Dniu Dziewczyny i później mam nadzieję, że wszyscy znajdziecie sposób na wsparcie edukacji dla dorastających dziewcząt na całym świecie. Nie musisz lecieć do Wietnamu - możesz zorganizować wyprzedaż piekarni, zorganizować projekt ze znajomymi, zaangażować swoje biuro i wiele więcej.
-<br/>
-<br/>Sprawdź projekty na stronie Girls Opportunity Alliance GoFundMe i daj nam znać, jak podejmujesz działania - ponieważ przyszłość naszego świata jest tak jasna jak nasze dziewczyny.
-<br/>
-<br/>–Michelle
-                </p>
+                    <p class="p_big">REGULAMIN Klubu Honorowych Dawców Krwi</p>
+                    <div class="button"><a href="REGULAMIN%20KLUBU%20Honorowych%20Dawc%C3%B3w%20Krwi.pdf">pobierz</a></div>
+                    <p class="p_big">Statut Fundacji</p>
+                    <div class="button"><a href="Statut%20Fundacji.pdf">pobierz</a></div>
+                    <p class="p_big">Strategia-2016-2020 (pdf)</p>
+                    <div class="button"><a href="Strategia-2016-2020.pdf">pobierz</a></div>
+                    <p class="p_big">Strategia-2016-2020 (docx)</p>
+                    <div class="button"><a href="Strategia-2016-2020.docx">pobierz</a></div>
                 </div>
             <div class="donate">
                     <span class="color_article"><h2 class="h_middle">dołącz do nas!</h2>
