--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="title_page">
         <!--MENU-->
             <div class="nav">
-                <a>strona główna</a>
-                <a>o nas</a>
-                <a>aktualności</a>
+                <a href="index.html" style="color: hotpink;">strona główna</a>
+                <a href="o_nas.html">o nas</a>
+                <a href="aktualno%C5%9Bci.html">aktualności</a>
                 <a>misja</a>
                 <a>do pobrania</a>
                 <a id="join">zostań wolontariuszem</a>
@@ -69,7 +69,7 @@
                     <span class="color_article"><h2 class="h_middle">dołącz do nas!</h2>
                         <p class="p_middle">dajmy światu nową nadzieję</p>
                         <div class="button"><a href="#">dołącz</a></div></span>
-                    <span class="image"></span>
+                    <span class="image" id="image_donate"></span>
                 </div>
                 <!--KONTAKT/NEWSLETTER/LINKI-->
                 <div class="info">
