--- a/o_nas.html
+++ b/o_nas.html
@@ -78,7 +78,7 @@
                     <span class="color_article"><h2 class="h_middle">dołącz do nas!</h2>
                         <p class="p_middle">dajmy światu nową nadzieję</p>
                         <div class="button"><a href="#">dołącz</a></div></span>
-                    <span class="image"></span>
+                    <span class="image" id="image_donate"></span>
                 </div>
                 <!--KONTAKT/NEWSLETTER/LINKI-->
                 <div class="info">
