--- a/polityka_prywatności.html
+++ b/polityka_prywatności.html
@@ -51,7 +51,7 @@ Pani/Pana dane nie będą wykorzystywane do zautomatyzowanego podejmowania decyz
                     <span class="color_article"><h2 class="h_middle">dołącz do nas!</h2>
                         <p class="p_middle">dajmy światu nową nadzieję</p>
                         <div class="button"><a href="#">dołącz</a></div></span>
-                    <span class="image"></span>
+                    <span class="image" id="image_donate"></span>
                 </div>
                 <!--KONTAKT/NEWSLETTER/LINKI-->
                 <div class="info">
