--- a/misja.html
+++ b/misja.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Aktualności</title>
+		<title>Polityka Prywatności</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="initial-scale=1.0">
         <link rel="stylesheet" href="style.css" type="text/css">
@@ -20,46 +20,24 @@
                 <a>do pobrania</a>
                 <a id="join">zostań wolontariuszem</a>
             </div>
-            <h1>Aktualności</h1>
+            <h1>misja</h1>
         </div>
             <div class="row">
             <div class="main">
-                <!--ARTYKUŁY-->
-                <div class="white_article">
-                <p class="p_big">Rozlicz z nami swój podatek</p>
-                <p class="p_small">
-                    Rozlicz swój PIT wspólnie z Fundacją Nowa Nadzieja i podziel się tym, co i tak oddajesz. Wystarczy, że wpiszesz w dokumentach nasz numer KRS.
-                </p>
+                <div class="image_and_text">
+                    <span class="image" style="background-image: url(krew.png); background-position: center;"></span>
+                    <span class="white_article"><h2 class="h_middle">krwiodawstwo</h2>
+                        <p class="p_small">
+                        Fundacja dąży o upowszechnianiem wiedzy o krwi, potrzebie jej oddawania oraz zachęca do aktywnego uczestnictwa w honorowym krwiodawstwie.
+Ruch Honorowego Krwiodawstwa jest integralną częścią struktury funcdacji i obecnie zrzesza blisko 1.000 członków i wolontariuszy, którzy poza systematycznym i planowym oddawaniem krwi, promują oraz upowszechniają ideały Ruchu, zjednując mu tym samym nowych sympatyków.
+                            <br/>
+                            <br/>
+Klub, jako podstawowa jednostka organizacyjna fundacji, zrzeszają dawców w środowiskach lokalnych: miejscach zamieszkania, pracy lub nauki. Podejmowane przez nie inicjatywy to m.in.: doraźne akcje poboru np.: w odzewie na apel służby zdrowia, szkolenia, pogadanki, konkursy, wspólne wyjazdy lub imprezy integracyjne, rekreacyjne czy sportowe. Rady HDK działają przy zarządach oddziałów rejonowych i okręgowych – stosownie do ich decyzji w tej sprawie, a ich działalność dotyczy przede wszystkim koordynacji i inspiracji prac klubów oraz współpracy ze służbą krwi. Nad całokształtem prac Ruchu oraz jego ogólnopolską strategią czuwa, powołana przez Zarząd Główny oraz Krajowa Rada Honorowego Krwiodawstwa Fundacji Nowa Nadzieja
+                        </p>
+                    </span>
                 </div>
-                <div class="color_article">
-                <p class="p_big">Liczy się każdy krok! Zapraszamy na ECCO Walkathon 2020!</p>
-                <p class="p_small">
-                    Spacerując, pomagamy! Do wyboru mamy dwie trasy – 6 km i 10 km. 
-Każdy 1 KM = 4 zł na konto wybranej przez uczestnika fundacji.
-TY DECYDUJESZ! Zebrane fundusze zostaną przekazane na realizację ważnych społecznie projektów.
-                </p>
-                </div>
-                <div class="white_article">
-                <p class="p_big">Projekt IT GrA</p>
-                <p class="p_small">
-                    Kluczowe informacje o projekcie dostępne na stronie itgra.pl
-                </p>
-                </div>
-                <div class="big_image" style="background-image: url(dziewczyna.jpg)"></div>
-                <div class="white_article">
-                <p class="p_big">Wpis z dnia 11.10.2019:</p>
-                <p class="p_small">
-                    Wiadomość w związku z międzynarodowym dniem dziewczyny
-                    <br/>Dzisiaj, w Dniu Dziewczyny, z radością dzielę się wiadomościami, że w grudniu jadę do Azji, aby spotkać się z niektórymi z tych dziewcząt i organizacjami, które je wspierają. Jadę do Wietnamu, gdzie Girls Opportunity Alliance współpracuje z Room to Read, aby rzucić światło na ważne wysiłki na rzecz wzmocnienia pozycji dziewcząt. Razem mamy nadzieję wyposażyć więcej dziewcząt w umiejętności krytyczne, których potrzebują, aby stać się liderami własnego życia. Nie mogę się doczekać, aby podzielić się z Tobą tymi niesamowitymi historiami i cieszę się, że Girls Opportunity Alliance połączy siły z Today Show i YouTube Originals, aby przedstawić Ci dziewczyny, które spotykamy po drodze.
-<br/>
-<br/>W Dniu Dziewczyny i później mam nadzieję, że wszyscy znajdziecie sposób na wsparcie edukacji dla dorastających dziewcząt na całym świecie. Nie musisz lecieć do Wietnamu - możesz zorganizować wyprzedaż piekarni, zorganizować projekt ze znajomymi, zaangażować swoje biuro i wiele więcej.
-<br/>
-<br/>Sprawdź projekty na stronie Girls Opportunity Alliance GoFundMe i daj nam znać, jak podejmujesz działania - ponieważ przyszłość naszego świata jest tak jasna jak nasze dziewczyny.
-<br/>
-<br/>–Michelle
-                </p>
-                </div>
-            <div class="donate">
+                
+                <div class="donate">
                     <span class="color_article"><h2 class="h_middle">dołącz do nas!</h2>
                         <p class="p_middle">dajmy światu nową nadzieję</p>
                         <div class="button"><a href="#">dołącz</a></div></span>
