Dodano podstronę z formularzem, dokończono podstronę Misja. Dodano połączenia między podstronami.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <a href="index.html" style="color: hotpink;">strona główna</a>
                 <a href="o_nas.html">o nas</a>
                 <a href="aktualno%C5%9Bci.html">aktualności</a>
-                <a>misja</a>
-                <a>do pobrania</a>
-                <a id="join">zostań wolontariuszem</a>
+                <a href="misja.html">misja</a>
+                <a href="do_pobrania.html">do pobrania</a>
+                <a id="join" href="donate.html">zostań wolontariuszem</a>
             </div>
                 <h1>nowa nadzieja naszą wizją na lepszą przyszłość</h1>
         </div>
@@ -36,14 +36,14 @@
                 <h2 class="h_big">o nas</h2>
                 <p class="p_small">
                     Fundacja Nowa Nadzieja jest częścią <b>OBAMA FOUNDATION.</b> To niezależna, krajowa organizacja non-profit założona 1 października 2019. w celu <b>promowania wsparcia społecznego i wyrównywania szans rozwojowo - zawodowych.</b> Rada Fundacji Nowa Nadzieja składa się z obecnych i byłych rektorów polskich uniwersytetów i innych wybitnych osób publicznych. W swoich celach ma za zadanie promować następujące działania społeczne:
-                        <b><br/>1. akcje związane z działnością lokalnych banków żywności
-                        <br/>2. wsparcia schronisk dla zwierząt,
-                        <br/>3. lokalnych zbiórkach śmieci,
-                        <br/>4. wsparcia w nauce dzieci ze środowisk nieuprzywi-
-                        <br/>lejowanych
-                        <br/>5. lokalne zbiórki krwi.</b>
+                        <b>1. akcje związane z działnością lokalnych banków żywności
+                        2. wsparcia schronisk dla zwierząt,
+                        3. lokalnych zbiórkach śmieci,
+                        4. wsparcia w nauce dzieci ze środowisk nieuprzywi-
+                        lejowanych
+                        5. lokalne zbiórki krwi.</b>
                     </p>
-                <div class="button"><a href="#">czytaj dalej</a></div>
+                <div class="button"><a href="o_nas.html">czytaj dalej</a></div>
                 </div>
                 <div class="color_article">
                 <h2 class="h_big">misja</h2>
@@ -53,7 +53,7 @@
 
                     <b>Dowiedz się więcej o tych inicjatywach na tej stronie.</b>
                     </p>
-                <div class="button"><a href="#">więcej</a></div>
+                <div class="button"><a href="misja.html">więcej</a></div>
                 </div>
                 <!--KALENDARZ-->
                 <div class="callendar">
@@ -68,7 +68,7 @@
                 <div class="donate">
                     <span class="color_article"><h2 class="h_middle">dołącz do nas!</h2>
                         <p class="p_middle">dajmy światu nową nadzieję</p>
-                        <div class="button"><a href="#">dołącz</a></div></span>
+                        <div class="button"><a href="donate.html">dołącz</a></div></span>
                     <span class="image" id="image_donate"></span>
                 </div>
                 <!--KONTAKT/NEWSLETTER/LINKI-->
@@ -94,16 +94,17 @@
                         
                         <div class="button"><a href="#">zapisz się</a></div>
                     </span>
+                    <!--LINKI-->
                     <span id="links">
                         <h2 class="h_small">Linki</h2>
                         <div class="little">
-                            <a>O Nas</a>
-                            <a>Aktualności</a>
-                            <a>Akcje</a>
-                            <a>Strona fundacji Michelle Obamy</a>
+                            <a href="o_nas.html">O Nas</a>
+                            <a href="aktualno%C5%9Bci.html">Aktualności</a>
+                            <a href="misja.html">Akcje</a>
+                            <a href="https://www.obama.org/mission/" target="_blank">Strona fundacji Michelle Obamy</a>
                             <a>Wesprzyj</a>
                             <a href="https://www.facebook.com/ITGirlsRevolutionAcademy/">Facebook</a>
-                            <a>Polityka prywatności</a>
+                            <a href="polityka_prywatno%C5%9Bci.html">Polityka prywatności</a>
                         </div>
                     </span>
                 </div>
