--- a/polityka_prywatności.html
+++ b/polityka_prywatności.html
@@ -13,12 +13,12 @@
         <div class="title">
         <!--MENU-->
             <div class="nav">
-                <a>strona główna</a>
-                <a>o nas</a>
-                <a>aktualności</a>
-                <a>misja</a>
-                <a>do pobrania</a>
-                <a id="join">zostań wolontariuszem</a>
+                <a href="index.html">strona główna</a>
+                <a href="o_nas.html">o nas</a>
+                <a href="aktualno%C5%9Bci.html">aktualności</a>
+                <a href="misja.html">misja</a>
+                <a href="do_pobrania.html">do pobrania</a>
+                <a id="join" href="donate.html">zostań wolontariuszem</a>
             </div>
             <h1>polityka prywatności</h1>
         </div>
@@ -50,7 +50,7 @@ Pani/Pana dane nie będą wykorzystywane do zautomatyzowanego podejmowania decyz
             <div class="donate">
                     <span class="color_article"><h2 class="h_middle">dołącz do nas!</h2>
                         <p class="p_middle">dajmy światu nową nadzieję</p>
-                        <div class="button"><a href="#">dołącz</a></div></span>
+                        <div class="button"><a href="donate.html">dołącz</a></div></span>
                     <span class="image" id="image_donate"></span>
                 </div>
                 <!--KONTAKT/NEWSLETTER/LINKI-->
@@ -76,16 +76,17 @@ Pani/Pana dane nie będą wykorzystywane do zautomatyzowanego podejmowania decyz
                         
                         <div class="button"><a href="#">zapisz się</a></div>
                     </span>
+                    <!--LINKI-->
                     <span id="links">
                         <h2 class="h_small">Linki</h2>
                         <div class="little">
-                            <a>O Nas</a>
-                            <a>Aktualności</a>
-                            <a>Akcje</a>
-                            <a>Strona fundacji Michelle Obamy</a>
-                            <a>Wesprzyj</a>
-                            <a href="https://www.facebook.com/ITGirlsRevolutionAcademy/">Facebook</a>
-                            <a>Polityka prywatności</a>
+                            <a href="o_nas.html">O Nas</a>
+                            <a href="aktualno%C5%9Bci.html">Aktualności</a>
+                            <a href="misja.html">Akcje</a>
+                            <a href="https://www.obama.org/mission/" target="_blank">Strona fundacji Michelle Obamy</a>
+                            <a href="donate.html">Wesprzyj</a>
+                            <a href="https://www.facebook.com/ITGirlsRevolutionAcademy/" target="_blank">Facebook</a>
+                            <a href="polityka_prywatno%C5%9Bci.html">Polityka prywatności</a>
                         </div>
                     </span>
                 </div>
