--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 
 	<body>
+        <a href="index.html"><div id="logo"></div></a>
         <!--STRONA TYTUŁOWA-->
         <div class="title_page">
         <!--MENU-->
@@ -61,7 +62,7 @@
                     <ul>
                         <li><span class="date">16.11.2019</span> - Konkurs IT Diamonds, Chorzów, godzina rozpoczęcia 9:00</li>
                         <li><span class="date">06.12.2019</span> - Santa Claud, Katowice, godzina rozpoczęcia 18:00</li>
-                        <li><span class="date">18.01.2019</span> - ECCO Walkathon, Warszawa, godzina rozpoczęcia 10:00</li>
+                        <li><span class="date">18.01.2020</span> - ECCO Walkathon, Warszawa, godzina rozpoczęcia 10:00</li>
                     </ul>
                 </div>
                 <!--PROŚBA O DOŁĄCZENIE-->
