--- a/donate.html
+++ b/donate.html
@@ -9,6 +9,7 @@
 	</head>
 
 	<body>
+        <a href="index.html"><div id="logo"></div></a>
         <!--STRONA TYTUŁOWA-->
         <div class="title">
         <!--MENU-->
