Dodano lżejsze wersje plików obrazkowych. Poprawiono czytelność tekstu w Aktualnościach oraz p_big w Misji.

--- a/misja.html
+++ b/misja.html
@@ -30,10 +30,10 @@
                     <span class="image" style="background-image: url(krew.png); background-position: center;"></span>
                     <span class="white_article"><h2 class="h_middle">krwiodawstwo</h2>
                         <p class="p_small">
-                        Fundacja dąży o upowszechnianiem wiedzy o krwi, potrzebie jej oddawania oraz zachęca do aktywnego uczestnictwa w honorowym krwiodawstwie.
-Ruch Honorowego Krwiodawstwa jest integralną częścią struktury funcdacji i obecnie zrzesza blisko 1.000 członków i wolontariuszy, którzy poza systematycznym i planowym oddawaniem krwi, promują oraz upowszechniają ideały Ruchu, zjednując mu tym samym nowych sympatyków.
+                            Fundacja dąży do <b>upowszechnienia wiedzy o krwi, potrzebie jej oddawania oraz zachęca do aktywnego uczestnictwa w honorowym krwiodawstwie.
+Ruch Honorowego Krwiodawstwa</b> jest integralną częścią struktury funcdacji i obecnie zrzesza blisko 1.000 członków i wolontariuszy, którzy poza systematycznym i planowym oddawaniem krwi, promują oraz upowszechniają ideały Ruchu, zjednując mu tym samym nowych sympatyków.
                     
-Klub, jako podstawowa jednostka organizacyjna fundacji, zrzeszają dawców w środowiskach lokalnych: miejscach zamieszkania, pracy lub nauki. Podejmowane przez nie inicjatywy to m.in.: doraźne akcje poboru np.: w odzewie na apel służby zdrowia, szkolenia, pogadanki, konkursy, wspólne wyjazdy lub imprezy integracyjne, rekreacyjne czy sportowe. Rady HDK działają przy zarządach oddziałów rejonowych i okręgowych – stosownie do ich decyzji w tej sprawie, a ich działalność dotyczy przede wszystkim koordynacji i inspiracji prac klubów oraz współpracy ze służbą krwi. Nad całokształtem prac Ruchu oraz jego ogólnopolską strategią czuwa, powołana przez Zarząd Główny oraz Krajowa Rada Honorowego Krwiodawstwa Fundacji Nowa Nadzieja.
+Klub, jako <b>podstawowa jednostka organizacyjna fundacji</b>, zrzeszają dawców w środowiskach lokalnych: miejscach zamieszkania, pracy lub nauki. Podejmowane przez nie inicjatywy to m.in.: <b>doraźne akcje poboru np.: w odzewie na apel służby zdrowia, szkolenia, pogadanki, konkursy, wspólne wyjazdy lub imprezy integracyjne, rekreacyjne czy sportowe.</b> Rady HDK działają przy zarządach oddziałów rejonowych i okręgowych – stosownie do ich decyzji w tej sprawie, a ich działalność dotyczy przede wszystkim koordynacji i inspiracji prac klubów oraz współpracy ze służbą krwi. Nad całokształtem prac Ruchu oraz jego ogólnopolską strategią czuwa, powołana przez <b>Zarząd Główny oraz Krajowa Rada Honorowego Krwiodawstwa Fundacji Nowa Nadzieja.</b>
                         </p>
                     </span>
                 </div>
@@ -85,7 +85,8 @@ Klub, jako podstawowa jednostka organizacyjna fundacji, zrzeszają dawców w śr
                 <div class="image_and_text">
                     <span class="white_article"><h2 class="h_middle">posprzątajmy świat!</h2>
                         <p class="p_small">
-                            <b>„Sprzątanie świata – Polska”</b> to wspólna lekcja poszanowania środowiska. Jej celem jest promowanie nieśmiecenia, edukacja odpadowa oraz inicjowanie działań, dzięki którym zmniejszy się nasz negatywny wpływ na środowisko. Od 1994 roku, w trzeci weekend września wraz z setkami tysięcy wolontariuszy: młodzieżą, dorosłymi – wszystkimi, którym zależy na ochronie środowiska, prowadzimy działania propagujące ograniczanie powstawania odpadów, selektywną zbiórkę i recykling, a także wyszukujemy i w miarę możliwości usuwamy dzikie wysypiska.  Działaniom tym towarzyszy cała gama innych działań: zakładanie zieleńców, sadzenie drzew, krzewów i kwiatów, organizowane są konkursy (plastyczne, piosenki), wystawy, festyny, koncerty, zabawy, ogniska, rajdy (piesze, rowerowe) itp. „Sprzątanie świata - Polska” angażuje i integruje społeczności lokalne. Zgodnie z opinią uczestników akcji, jest ona dla samorządów dobrym narzędziem w prowadzeniu ich działalności w zakresie gospodarki odpadami, dla placówek oświatowych interesującą metodą pracy wychowawczej oraz wartościowym sposobem na realizację wolontariatu.
+                            <b>„Sprzątanie świata – Polska”</b> to wspólna lekcja poszanowania środowiska. Jej celem jest promowanie nieśmiecenia, edukacja odpadowa oraz inicjowanie działań, dzięki którym zmniejszy się nasz negatywny wpływ na środowisko. Od 1994 roku, w trzeci weekend września wraz z setkami tysięcy wolontariuszy: młodzieżą, dorosłymi – wszystkimi, którym zależy na ochronie środowiska, prowadzimy działania propagujące ograniczanie powstawania odpadów, selektywną zbiórkę i recykling, a także wyszukujemy i w miarę możliwości usuwamy dzikie wysypiska.  
+                            Działaniom tym towarzyszy cała gama innych działań: <b>zakładanie zieleńców, sadzenie drzew, krzewów i kwiatów, organizowane są konkursy (plastyczne, piosenki), wystawy, festyny, koncerty, zabawy, ogniska, rajdy (piesze, rowerowe) itp. </b>„Sprzątanie świata - Polska” angażuje i integruje społeczności lokalne. Zgodnie z opinią uczestników akcji, jest ona dla samorządów dobrym narzędziem w prowadzeniu ich działalności w zakresie gospodarki odpadami, dla placówek oświatowych interesującą metodą pracy wychowawczej oraz wartościowym sposobem na realizację wolontariatu.
                         </p>
                     </span>
                     <span class="image" style="background-image: url(r%C4%99ce.jpg); background-position: center;"></span>
@@ -97,14 +98,14 @@ Klub, jako podstawowa jednostka organizacyjna fundacji, zrzeszają dawców w śr
                             Od początku swego istnienia Fundacja realizuje „Program Pomocy dzieciom i młodzieży z  rodzin marginalizowanych”.
 
 
-Fundacja "Gniazdo" prowadzi 2 placówki wsparcia dziennego typu specjalistycznego:
+<b>Fundacja "Gniazdo"</b> prowadzi 2 placówki wsparcia dziennego typu specjalistycznego:
 - Świetlicę Socjoterapeutyczną
 - Młodzieżowy Klub Wspierania Rozwoju Osobistego
 oraz placówkę niestacjonarną:
 - Praca podwórkowa na terenie Katowice Bogucice
 
  
-Celem naszych działań jest wyrównanie szans na „dobry start” w dorosłe życie, wyposażenie dzieci i młodzieży w zasoby umożliwiające im samodzielne społecznie i ekonomicznie życie odmienne od wzorców, które poznali w swych środowiskach rodzinnych i lokalnych.
+Celem naszych działań jest <b>wyrównanie szans na „dobry start” w dorosłe życie, wyposażenie dzieci i młodzieży w zasoby umożliwiające im samodzielne społecznie i ekonomicznie życie</b> odmienne od wzorców, które poznali w swych środowiskach rodzinnych i lokalnych.
                         </p>
                     </span>
                 </div>
