Poprawiono responsywność formularza. Dodano nowy plik html z grafiką(zagadka).

--- a/donate.html
+++ b/donate.html
@@ -55,7 +55,7 @@
                             </p>
                         <input type="checkbox">
                     </div>
-                            <div class="button"><a>wyślij</a></div>
+                            <div class="button"><a href="https://forms.gle/M327RiTZeCHTS54y9">wyślij</a></div>
                         </form>
                     </span>
                 
